@@ -8,6 +8,9 @@ Changelog
 Plone 4.0 - UNRELEASED
 ----------------------
 
+- Removed strangely implemented users search from the users folder.
+  [hannosch]
+
 - Removed "Listed in searches" property from the personalize form and
   memberdata. The setting wasn't used by any code anymore. This closes
   http//dev.plone.org/plone/ticket/8064.
